# penitalia_bot

./: .gitignore  Dockerfile  README.md  docker-compose.sample.yml  pyproject.toml  setup.py
penitaliabot/: bot.py  config.py  sapi.py  server.py
src/penitaliabot/: bot.py  config.py  server.py  tts.py
